@@ -3,6 +3,7 @@
 ## 1.8 - Unreleased
 - Official URL is now https://sr.ht/~lioploum/offpunk/
 - Add support for the finger protocol (by Sotiris Papatheodorou)
+- "restricted" mode has been removed because unmaintained (code cleanup)
 - "set accept_bad_ssl_certificates True" allows to lower HTTPS SSL requirements 
 - Accept "localhost" as a valid URL
 - Better feedback when --sync an URL which is streaming
